# ChatSim

./: .gitignore  .gitmodules  .run_env  README.md  Setting.md  main.py  requirements.txt
chatsim/background/mcnerf/: CMakeLists.txt  train-render-1137.sh  train.sh  train_or_render.sh  train_or_render_a100_1.sh  train_or_render_a100_2.sh
chatsim/background/mcnerf/src/: ExpRunner.cpp
chatsim/background/mcnerf/src/Field/: TCNNWP.cpp  TCNNWP.h
chatsim/background/mcnerf/src/PtsSampler/: PersSampler.cpp  PtsSamplerFactory.cpp
chatsim/foreground/Blender/: README.MD
chatsim/foreground/mclight/skydome_lighting/: README.md  dataset
chatsim/foreground/mclight/skydome_lighting/mc_to_sky/: logs
chatsim/foreground/mclight/skydome_lighting/mc_to_sky/config/stage2/: multi_view_avg.yaml
data_utils/: link_tfrecords.sh
scripts/: run_main.sh
